# django-upload-files

./: .gitignore  README.md  pyproject.toml
files_upload/: manage.py
files_upload/core/: admin.py  models.py  serializers.py  views.py
files_upload/core/migrations/: 0001_initial.py  0002_alter_files_id.py  0003_rename_files_file.py  0004_alter_file_file.py  0005_student.py  0006_student_from_file.py
files_upload/core/tests/: test_api.py
files_upload/files_upload/: asgi.py  settings.py  urls.py  wsgi.py
insomnia_collection/: export.json
